--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "react-dom": "18.2.0",
     "react-form-hook": "^0.0.1",
     "react-icons": "^4.9.0",
+    "tailwind-merge": "^1.13.1",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zustand": "^4.3.8"
   }
 }
