--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-form-hook": "^0.0.1",
+    "react-hook-form": "^7.45.0",
     "react-icons": "^4.9.0",
     "tailwind-merge": "^1.13.1",
     "tailwindcss": "3.3.2",
